<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SearchActivity">

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin_25dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <in.probusinsurance.probusdesign.ui.edittext.EmailEditText
                    android:id="@+id/home_txtsearchview"
                    style="@style/EditText_Style_Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/home_icon_search"
                    android:background="@color/colorTheme"
                    android:hint="@string/search_hint"
                    android:lines="1"
                    android:maxLines="1" />


                <in.probusinsurance.probusdesign.ui.button.ImageButton
                    android:id="@+id/home_icon_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/margin_5dp"
                    android:padding="@dimen/margin_5dp"
                    android:src="@drawable/ic_search" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_15dp"
            android:paddingRight="@dimen/margin_15dp"
            android:paddingBottom="@dimen/margin_15dp">

            <in.probusinsurance.probusdesign.ui.textview.TextViewMediumHeading
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/recent" />

            <in.probusinsurance.probusdesign.ui.textview.TextViewSubHeadingSmall
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/clearall"
                app:customColor="@color/colorPrimary"
                app:customColorEnable="true" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recentRecyclearView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="15"
            tools:listitem="@layout/layout_recent_search" />

    </LinearLayout>
</layout>